# gigagrad

./: Cargo.toml  flake.nix  generate_dataset.py  pyproject.toml
src/: main.rs  neuron.rs  value.rs
